<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hello"
        app:layout_constraintWidth_percent="0.55">

        <Button
            android:id="@+id/home_btn_calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/home_btn_calc"
            android:background="@color/home_btn_bg"
            android:textSize="18sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/home_btn_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/home_btn_game"
            android:background="@color/home_btn_bg"
            android:textSize="18sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/home_btn_anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/home_btn_anim"
            android:background="@color/home_btn_bg"
            android:textSize="18sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/home_btn_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/home_btn_rate"
            android:background="@color/home_btn_bg"
            android:textSize="18sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/home_btn_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/home_btn_chat"
            android:background="@color/home_btn_bg"
            android:textSize="18sp"
            app:backgroundTint="@null" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>