<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".AnimActivity">

    <TextView
        android:id="@+id/anim_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_btn_anim"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anim_tv_title"
        app:layout_constraintVertical_bias="0.1">

        <View
            android:id="@+id/anim_v_alpha"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/game_shape"
            android:backgroundTint="@color/game_tv_tile_bg_0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/anim_tv_alpha" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anim_tv_title"
        app:layout_constraintVertical_bias="0.1">

        <View
            android:id="@+id/anim_v_rotate"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/game_shape"
            android:backgroundTint="@color/game_tv_tile_bg_0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/anim_tv_rotate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anim_tv_title"
        app:layout_constraintVertical_bias="0.5">

        <View
            android:id="@+id/anim_v_scale"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/game_shape"
            android:backgroundTint="@color/game_tv_tile_bg_0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/anim_tv_scale" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anim_tv_title"
        app:layout_constraintVertical_bias="0.5">

        <View
            android:id="@+id/anim_v_translate"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/game_shape"
            android:backgroundTint="@color/game_tv_tile_bg_0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/anim_tv_translate" />
    </LinearLayout>

    <ImageView
        android:id="@+id/anim_iv_bell"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:tint="@color/game_tv_tile_bg_0"
        android:src="@android:drawable/ic_popup_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>