<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@drawable/game_shape"
            android:backgroundTint="@color/game_title_bg"
            android:text="@string/game_tv_title"
            android:textSize="42sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">
            <TextView
                android:id="@+id/game_tv_score"
                style="@style/game_score"
                tools:text="SCORE\n12345" />
            <Button
                style="@style/game_btn"
                android:text="@string/game_btn_new"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">
            <TextView
                android:id="@+id/game_tv_best"
                style="@style/game_score"
                tools:text="BEST\n12345"/>
            <Button
                android:id="@+id/game_btn_undo"
                style="@style/game_btn"
                android:text="@string/game_btn_undo"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_tv_info"
        />

    <LinearLayout
        android:id="@+id/game_layout_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/game_shape"
        android:backgroundTint="@color/game_layout_field"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:orientation="vertical">
        <LinearLayout
            style="@style/game_tiles_line">
            <TextView
                android:id="@+id/game_tv_tile_00"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_0"
                android:textColor="@color/game_tv_tile_fg_0"
                tools:text="0"/>
            <TextView
                android:id="@+id/game_tv_tile_01"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_2"
                android:textColor="@color/game_tv_tile_fg_2"
                tools:text="2"/>
            <TextView
                android:id="@+id/game_tv_tile_02"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_4"
                android:textColor="@color/game_tv_tile_fg_4"
                tools:text="4"/>
            <TextView
                android:id="@+id/game_tv_tile_03"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_8"
                android:textColor="@color/game_tv_tile_fg_8"
                tools:text="8"/>
        </LinearLayout>

        <LinearLayout
            style="@style/game_tiles_line">
            <TextView
                android:id="@+id/game_tv_tile_10"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_16"
                android:textColor="@color/game_tv_tile_fg_16"
                tools:text="16"/>
            <TextView
                android:id="@+id/game_tv_tile_11"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_32"
                android:textColor="@color/game_tv_tile_fg_32"
                tools:text="32"/>
            <TextView
                android:id="@+id/game_tv_tile_12"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_64"
                android:textColor="@color/game_tv_tile_fg_64"
                tools:text="64"/>
            <TextView
                android:id="@+id/game_tv_tile_13"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_8"
                android:textColor="@color/game_tv_tile_fg_8"
                tools:text="8"/>
        </LinearLayout>

        <LinearLayout
            style="@style/game_tiles_line">
            <TextView
                android:id="@+id/game_tv_tile_20"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_0"
                android:textColor="@color/game_tv_tile_fg_0"
                tools:text="0"/>
            <TextView
                android:id="@+id/game_tv_tile_21"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_2"
                android:textColor="@color/game_tv_tile_fg_2"
                tools:text="2"/>
            <TextView
                android:id="@+id/game_tv_tile_22"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_4"
                android:textColor="@color/game_tv_tile_fg_4"
                tools:text="4"/>
            <TextView
                android:id="@+id/game_tv_tile_23"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_8"
                android:textColor="@color/game_tv_tile_fg_8"
                tools:text="8"/>
        </LinearLayout>

        <LinearLayout
            style="@style/game_tiles_line">
            <TextView
                android:id="@+id/game_tv_tile_30"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_0"
                android:textColor="@color/game_tv_tile_fg_0"
                tools:text="0"/>
            <TextView
                android:id="@+id/game_tv_tile_31"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_2"
                android:textColor="@color/game_tv_tile_fg_2"
                tools:text="2"/>
            <TextView
                android:id="@+id/game_tv_tile_32"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_4"
                android:textColor="@color/game_tv_tile_fg_4"
                tools:text="4"/>
            <TextView
                android:id="@+id/game_tv_tile_33"
                style="@style/game_tile"
                android:backgroundTint="@color/game_tv_tile_bg_8"
                android:textColor="@color/game_tv_tile_fg_8"
                tools:text="8"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>